making fixes by w3 validator

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -23,7 +23,7 @@
             font-size: 58px;
         }
 
-        a[type="button"] {
+        a#svgButton {
             position: relative;
             padding: 23px 35px;
             z-index: 0;
@@ -300,7 +300,7 @@
             font-size: 58px;
         }
 
-        a[type="button"] {
+        a#svgButton {
             position: relative;
             padding: 23px 35px;
             z-index: 0;
@@ -759,7 +759,7 @@
             font-size: 48px;
         }
 
-        a[type="button"] {
+        a#svgButton {
             position: relative;
             padding: 23px 35px;
             z-index: 0;
