--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,7 +190,7 @@ header {
         margin-left: 26rem;
     }
 
-    a[type="button"] {
+    a#svgButton {
         position: relative;
         padding: 35px 68px;
         z-index: 0;
