--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ header {
     text-align: left;
     float: right;
     margin-left: 26rem; }
-  .headerImage a[type="button"] {
+  .headerImage a#svgButton {
     position: relative;
     padding: 35px 68px;
     z-index: 0;
@@ -174,29 +174,29 @@ header {
     margin-top: 50%;
     margin-bottom: 50%;
     margin-right: -9rem; }
-    .headerImage a[type="button"] .icon {
+    .headerImage a#svgButton .icon {
       position: absolute;
       top: 0px;
       left: 0px;
       height: 100%;
       width: 100%;
       z-index: -1; }
-      .headerImage a[type="button"] .icon path {
+      .headerImage a#svgButton .icon path {
         transition: opacity 0.4s ease; }
-        .headerImage a[type="button"] .icon path:first-of-type {
+        .headerImage a#svgButton .icon path:first-of-type {
           fill: transparent;
           stroke: url(#linearGradient-1);
           stroke-width: 3;
           opacity: 1; }
-        .headerImage a[type="button"] .icon path.icon--plain {
+        .headerImage a#svgButton .icon path.icon--plain {
           opacity: 0;
           stroke: none;
           stroke-width: 0; }
-    .headerImage a[type="button"]:hover {
+    .headerImage a#svgButton:hover {
       transition: all 500ms ease-in-out; }
-      .headerImage a[type="button"]:hover path:first-of-type {
+      .headerImage a#svgButton:hover path:first-of-type {
         opacity: 0; }
-      .headerImage a[type="button"]:hover path.icon--plain {
+      .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
 
 main {
@@ -529,7 +529,7 @@ body#Услуги footer {
       text-align: center;
       float: none;
       font-size: 58px; }
-    .headerImage a[type="button"] {
+    .headerImage a#svgButton {
       position: relative;
       padding: 23px 35px;
       z-index: 0;
@@ -544,27 +544,27 @@ body#Услуги footer {
       text-decoration: none;
       margin: 0 0 0 0;
       border-radius: 35px; }
-      .headerImage a[type="button"] .icon {
+      .headerImage a#svgButton .icon {
         position: absolute;
         top: 0px;
         left: 0px;
         height: 100%;
         width: 100%;
         z-index: -1; }
-        .headerImage a[type="button"] .icon path {
+        .headerImage a#svgButton .icon path {
           transition: opacity 0.4s ease; }
-          .headerImage a[type="button"] .icon path:first-of-type {
+          .headerImage a#svgButton .icon path:first-of-type {
             fill: transparent;
             stroke: url(#linearGradient-1);
             stroke-width: 3;
             opacity: 1; }
-          .headerImage a[type="button"] .icon path.icon--plain {
+          .headerImage a#svgButton .icon path.icon--plain {
             opacity: 0;
             stroke: none;
             stroke-width: 0; }
-      .headerImage a[type="button"]:hover path:first-of-type {
+      .headerImage a#svgButton:hover path:first-of-type {
         opacity: 0; }
-      .headerImage a[type="button"]:hover path.icon--plain {
+      .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
   body#Услуги .headerImage {
     background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
@@ -706,7 +706,7 @@ body#Услуги footer {
       text-align: center;
       float: none;
       font-size: 58px; }
-    .headerImage a[type="button"] {
+    .headerImage a#svgButton {
       position: relative;
       padding: 23px 35px;
       z-index: 0;
@@ -721,27 +721,27 @@ body#Услуги footer {
       text-decoration: none;
       margin: 0 0 0 0;
       border-radius: 35px; }
-      .headerImage a[type="button"] .icon {
+      .headerImage a#svgButton .icon {
         position: absolute;
         top: 0px;
         left: 0px;
         height: 100%;
         width: 100%;
         z-index: -1; }
-        .headerImage a[type="button"] .icon path {
+        .headerImage a#svgButton .icon path {
           transition: opacity 0.4s ease; }
-          .headerImage a[type="button"] .icon path:first-of-type {
+          .headerImage a#svgButton .icon path:first-of-type {
             fill: transparent;
             stroke: url(#linearGradient-1);
             stroke-width: 3;
             opacity: 1; }
-          .headerImage a[type="button"] .icon path.icon--plain {
+          .headerImage a#svgButton .icon path.icon--plain {
             opacity: 0;
             stroke: none;
             stroke-width: 0; }
-      .headerImage a[type="button"]:hover path:first-of-type {
+      .headerImage a#svgButton:hover path:first-of-type {
         opacity: 0; }
-      .headerImage a[type="button"]:hover path.icon--plain {
+      .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
   main section.one .card {
     min-width: 300px; }
@@ -987,7 +987,7 @@ body#Услуги footer {
       text-align: center;
       float: none;
       font-size: 48px; }
-    .headerImage a[type="button"] {
+    .headerImage a#svgButton {
       position: relative;
       padding: 23px 35px;
       z-index: 0;
@@ -1002,27 +1002,27 @@ body#Услуги footer {
       text-decoration: none;
       margin: 0 0 0 0;
       border-radius: 35px; }
-      .headerImage a[type="button"] .icon {
+      .headerImage a#svgButton .icon {
         position: absolute;
         top: 0px;
         left: 0px;
         height: 100%;
         width: 100%;
         z-index: -1; }
-        .headerImage a[type="button"] .icon path {
+        .headerImage a#svgButton .icon path {
           transition: opacity 0.4s ease; }
-          .headerImage a[type="button"] .icon path:first-of-type {
+          .headerImage a#svgButton .icon path:first-of-type {
             fill: transparent;
             stroke: url(#linearGradient-1);
             stroke-width: 3;
             opacity: 1; }
-          .headerImage a[type="button"] .icon path.icon--plain {
+          .headerImage a#svgButton .icon path.icon--plain {
             opacity: 0;
             stroke: none;
             stroke-width: 0; }
-      .headerImage a[type="button"]:hover path:first-of-type {
+      .headerImage a#svgButton:hover path:first-of-type {
         opacity: 0; }
-      .headerImage a[type="button"]:hover path.icon--plain {
+      .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
   main section.one .card {
     min-width: 300px; }
